- 상태 바, 타이틀 바 삭제 - 글꼴 변경

--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -33,6 +33,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="10dp"
         android:hint="냉장고 번호(1 ~ 9)"
+        android:fontFamily="@font/nanumsquareneoregular"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -48,6 +49,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="10dp"
         android:hint="상품 이름"
+        android:fontFamily="@font/nanumsquareneoregular"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -63,6 +65,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="10dp"
         android:hint="수량"
+        android:fontFamily="@font/nanumsquareneoregular"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -78,6 +81,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="10dp"
         android:text="유통기한: "
+
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toStartOf="@id/expiryDateButton"
         app:layout_constraintHorizontal_bias="0.5"
