--- a/app/src/main/res/layout/activity_locker.xml
+++ b/app/src/main/res/layout/activity_locker.xml
@@ -13,6 +13,7 @@
         android:layout_margin="10dp"
         android:ems="10"
         android:hint="비밀번호를 입력하세요 "
+        android:fontFamily="@font/nanumsquareneoregular"
         android:gravity="center"
         android:inputType="textPassword"
         android:paddingTop="30sp"
@@ -32,6 +33,7 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="1"
+
             android:textSize="40dp" />
 
         <Button
