--- a/app/src/main/res/layout/activity_locker.xml
+++ b/app/src/main/res/layout/activity_locker.xml
@@ -12,9 +12,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:ems="10"
-        android:hint="비밀번호를 입력하세요 "
         android:fontFamily="@font/nanumsquareneoregular"
         android:gravity="center"
+        android:hint="비밀번호를 입력하세요 "
         android:inputType="textPassword"
         android:paddingTop="30sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
@@ -162,8 +162,8 @@
 
     <Button
         android:id="@+id/btn_ok"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="337dp"
+        android:layout_height="160dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
