--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,7 +20,8 @@
         app:layout_constraintBottom_toTopOf="@+id/btn_register"
         app:layout_constraintEnd_toStartOf="@+id/btn_doubleCheck"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.272" />
 
     <EditText
         android:id="@+id/et_pass"
@@ -36,13 +37,13 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/et_id"
         app:layout_constraintTop_toBottomOf="@+id/et_id"
-        app:layout_constraintVertical_bias="0.212" />
+        app:layout_constraintVertical_bias="0.175" />
 
     <EditText
         android:id="@+id/et_pass2"
         android:layout_width="310dp"
         android:layout_height="50dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="비밀번호 확인"
         android:inputType="textPassword"
@@ -55,7 +56,7 @@
         android:id="@+id/et_name"
         android:layout_width="310dp"
         android:layout_height="50dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="이름"
         android:inputType="text"
@@ -67,9 +68,9 @@
     <EditText
         android:id="@+id/et_nickname"
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="48dp"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="닉네임"
         android:inputType="text"
@@ -82,7 +83,7 @@
         android:id="@+id/et_phone"
         android:layout_width="310dp"
         android:layout_height="50dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="전화번호"
         android:inputType="text"
@@ -96,7 +97,7 @@
         android:id="@+id/et_address"
         android:layout_width="310dp"
         android:layout_height="50dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="주소"
         android:inputType="text"
@@ -108,41 +109,39 @@
         android:id="@+id/btn_register"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="14dp"
+        android:layout_marginBottom="36dp"
         android:text="회원가입"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/et_address"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/et_address"
-        app:layout_constraintTop_toBottomOf="@+id/btn_doubleCheck2"
-        app:layout_constraintVertical_bias="0.997" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/et_address" />
 
     <Button
         android:id="@+id/btn_doubleCheck"
         android:layout_width="wrap_content"
-        android:layout_height="54dp"
-        android:layout_marginTop="24dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="42dp"
         android:layout_marginEnd="25dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="210dp"
         android:text="중복확인"
-        app:layout_constraintBottom_toTopOf="@+id/et_pass"
+        app:layout_constraintBottom_toTopOf="@+id/btn_doubleCheck2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/et_id"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.657" />
 
     <Button
         android:id="@+id/btn_doubleCheck2"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginTop="254dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginBottom="141dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginBottom="232dp"
         android:text="중복확인"
-        app:layout_constraintBottom_toTopOf="@+id/btn_register"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/et_nickname"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_doubleCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
