--- a/app/src/main/res/layout/frag3.xml
+++ b/app/src/main/res/layout/frag3.xml
@@ -30,18 +30,19 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="201dp"
+        android:layout_height="363dp"
         android:background="#0000BCD4">
 
         <ViewFlipper
             android:id="@+id/image_slide"
-            android:layout_width="214dp"
-            android:layout_height="0dp"
+            android:layout_width="361dp"
+            android:layout_height="328dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.542">
 
         </ViewFlipper>
 
