--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -1,19 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#F3F3F3">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F3F3F3"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="16dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/nanumsquareneobold"
+            android:padding="16dp"
+            android:text="아이디 >"
+            android:textSize="18sp"
+            tools:ignore="HardcodedText" />
+
+        <TextView
+            android:id="@+id/idTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:text=""
+            android:textSize="18sp"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText" />
+
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#CCCCCC" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="아이디"
+        android:text="비밀번호 변경 >"
+        android:fontFamily="@font/nanumsquareneobold"
         android:textSize="18sp"
+        android:textStyle="bold"
+        android:padding="16dp"
+        tools:ignore="HardcodedText" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
+
+        <EditText
+            android:id="@+id/editTextPassword1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/nanumsquareneoregular"
+            android:hint="비밀번호를 입력하세요"
+            android:padding="16dp"
+            tools:ignore="HardcodedText" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/editTextPassword2"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/nanumsquareneoregular"
+                android:hint="한 번 더 입력하세요"
+                android:padding="16dp"
+                tools:ignore="HardcodedText" />
+
+            <Button
+                android:id="@+id/apply_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="적용" />
+        </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#CCCCCC" />
+
+
+    <!-- 이름, 닉네임, 전화번호, 주소 항목 추가 -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+    <TextView
+        android:id="@+id/nameTitleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:fontFamily="@font/nanumsquareneobold"
         android:padding="16dp"
+        android:text="이름 >"
+        android:textSize="18sp"
+        android:textStyle="bold"
         tools:ignore="HardcodedText" />
 
     <TextView
@@ -25,108 +131,191 @@
         android:textSize="18sp"
         android:textStyle="bold"
         tools:ignore="HardcodedText" />
+        </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
 
+        <EditText
+            android:id="@+id/editTextName"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/nanumsquareneoregular"
+            android:hint="이름을 입력하세요"
+            android:padding="16dp"
+            tools:ignore="HardcodedText" />
+
+        <Button
+            android:id="@+id/apply_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="적용" />
+
+        </LinearLayout>
+    </LinearLayout>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#CCCCCC" />
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="비밀번호"
+        android:orientation="vertical"
+        android:padding="16dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:fontFamily="@font/nanumsquareneobold"
+        android:padding="16dp"
+        android:text="닉네임 >"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:padding="16dp"
-        tools:ignore="HardcodedText" />
-
-
-    <!-- 이름, 닉네임, 전화번호, 주소 항목 추가 -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="이름"
-        android:fontFamily="@font/nanumsquareneobold"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:padding="16dp"
-        tools:ignore="HardcodedText" />
-
-    <EditText
-        android:id="@+id/editTextName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="이름을 입력하세요"
-        android:fontFamily="@font/nanumsquareneoregular"
-        android:padding="16dp"
         tools:ignore="HardcodedText" />
 
     <TextView
+        android:id="@+id/nicknameTextView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="닉네임"
-        android:fontFamily="@font/nanumsquareneobold"
+        android:layout_height="59dp"
+        android:padding="16dp"
+        android:text=""
         android:textSize="18sp"
         android:textStyle="bold"
-        android:padding="16dp"
         tools:ignore="HardcodedText" />
-
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
     <EditText
         android:id="@+id/editTextNickname"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:hint="닉네임을 입력하세요"
         android:fontFamily="@font/nanumsquareneoregular"
         android:padding="16dp"
         tools:ignore="HardcodedText" />
-
+        <Button
+            android:id="@+id/apply_nickname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="적용" />
+    </LinearLayout>
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#CCCCCC" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="전화번호"
-        android:textSize="18sp"
         android:fontFamily="@font/nanumsquareneobold"
+        android:padding="16dp"
+        android:text="전화번호 >"
+        android:textSize="18sp"
         android:textStyle="bold"
-        android:padding="16dp"
         tools:ignore="HardcodedText" />
-
-    <EditText
-        android:id="@+id/editTextPhone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/nanumsquareneoregular"
-        android:hint="전화번호를 입력하세요"
-        android:padding="16dp"
-        tools:ignore="HardcodedText" />
-
     <TextView
+        android:id="@+id/phoneTextView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="주소"
-        android:fontFamily="@font/nanumsquareneobold"
+        android:layout_height="59dp"
+        android:padding="16dp"
+        android:text=""
         android:textSize="18sp"
         android:textStyle="bold"
-        android:padding="16dp"
         tools:ignore="HardcodedText" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
+        <EditText
+            android:id="@+id/editTextPhone"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/nanumsquareneoregular"
+            android:hint="전화번호를 입력하세요"
+            android:padding="16dp"
+            tools:ignore="HardcodedText" />
+
+        <Button
+            android:id="@+id/apply_phone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="적용" />
+    </LinearLayout>
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#CCCCCC" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/nanumsquareneobold"
+        android:padding="16dp"
+        android:text="주소 >"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        tools:ignore="HardcodedText" />
+    <TextView
+        android:id="@+id/addressTextView"
+        android:layout_width="match_parent"
+        android:layout_height="59dp"
+        android:padding="16dp"
+        android:text=""
+        android:textSize="18sp"
+        android:textStyle="bold"
+        tools:ignore="HardcodedText" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
     <EditText
         android:id="@+id/editTextAddress"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:hint="주소를 입력하세요"
         android:fontFamily="@font/nanumsquareneoregular"
         android:padding="16dp"
         tools:ignore="HardcodedText" />
-
-    <Button
-        android:id="@+id/buttonSave"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="수정하기"
-        android:fontFamily="@font/nanumsquareneobold"
-        android:textSize="18sp"
-        android:layout_margin="16dp"
-        tools:ignore="HardcodedText" />
+        <Button
+            android:id="@+id/apply_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="적용" />
+    </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
+</ScrollView>
