--- a/app/src/main/res/layout/frag2.xml
+++ b/app/src/main/res/layout/frag2.xml
@@ -17,6 +17,7 @@
         android:drawableTint="#131313"
         android:gravity="center"
         android:text="이달의 나눔왕"
+        android:fontFamily="@font/nanumsquareneoregular"
         android:textColor="#131313"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -46,6 +47,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="4dp"
                 android:text="1.AI도 먹잘알"
+                android:fontFamily="@font/nanumsquareneoregular"
                 android:textColor="#131313"
                 android:textSize="10sp"
                 android:textStyle="bold"
@@ -72,6 +74,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="4dp"
                 android:text="2. 공유"
+                android:fontFamily="@font/nanumsquareneoregular"
                 android:textColor="#131313"
                 android:textSize="10sp"
                 android:textStyle="bold"
@@ -97,6 +100,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="4dp"
                 android:text="3. 마음냉장고"
+                android:fontFamily="@font/nanumsquareneoregular"
                 android:textColor="#131313"
                 android:textSize="10sp"
                 android:textStyle="bold"
@@ -170,6 +174,7 @@
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp"
                 android:text="미리보기"
+                android:fontFamily="@font/nanumsquareneoregular"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
