--- a/app/src/main/res/layout/frag1.xml
+++ b/app/src/main/res/layout/frag1.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
             android:text="  나의 냉장고"
+            android:fontFamily="@font/nanumsquareneoregular"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textSize="28sp"
             android:textStyle="bold"
@@ -44,6 +45,7 @@
             android:layout_marginBottom="112dp"
             android:backgroundTint="#DBDDDC"
             android:text="Open"
+            android:fontFamily="@font/nanumsquareneoregular"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="#000000"
             android:textSize="34sp"
