--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,55 +7,56 @@
     tools:context=".LoginActivity">
 
     <EditText
-        android:id="@+id/et_id2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="240dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
-        android:fontFamily="@font/nanumsquareneoregular"
-        android:hint="아이디"
-        android:inputType="text"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="23sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
         android:id="@+id/et_pass2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:fontFamily="@font/nanumsquareneoregular"
         android:hint="비밀번호"
         android:inputType="textPassword"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="23sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/et_id2"
         app:layout_constraintStart_toStartOf="@+id/et_id2"
         app:layout_constraintTop_toBottomOf="@+id/et_id2" />
 
+    <EditText
+        android:id="@+id/et_id2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="364dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="120dp"
+        android:ems="10"
+        android:fontFamily="@font/nanumsquareneoregular"
+        android:hint="아이디"
+        android:inputType="text"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_login"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/btn_login"
-        android:layout_width="264dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="404dp"
-        android:layout_marginBottom="13dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginEnd="56dp"
+        android:layout_marginBottom="134dp"
         android:fontFamily="@font/nanumsquareneoregular"
         android:text="로그인"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
-        app:layout_constraintEnd_toEndOf="@+id/et_pass2"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/et_pass2"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_id2" />
 
     <TextView
         android:id="@+id/textView4"
@@ -67,7 +68,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_findPass1"
         app:layout_constraintStart_toEndOf="@+id/btn_register1"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_login"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/btn_register1"
