레이아웃 수정 및 툴바 적용

--- a/app/src/main/res/layout/activity_locker.xml
+++ b/app/src/main/res/layout/activity_locker.xml
@@ -162,7 +162,7 @@
 
     <Button
         android:id="@+id/btn_ok"
-        android:layout_width="337dp"
+        android:layout_width="match_parent"
         android:layout_height="160dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
