--- a/app/src/main/res/layout/frag1.xml
+++ b/app/src/main/res/layout/frag1.xml
@@ -7,6 +7,24 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/custom_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/white">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="푸쉐"
+            app:titleTextColor="@color/black"
+            app:titleTextAppearance="@font/nanumsquareneobold"
+            android:layout_gravity="center"
+            android:id="@+id/toolbar_title"
+            android:textSize="30sp"
+            />
+    </androidx.appcompat.widget.Toolbar>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -42,18 +60,18 @@
             android:id="@+id/lockerButton"
             android:layout_width="132dp"
             android:layout_height="123dp"
-            android:layout_marginBottom="112dp"
+            android:layout_marginBottom="240dp"
             android:backgroundTint="#DBDDDC"
-            android:text="Open"
             android:fontFamily="@font/nanumsquareneoregular"
+            android:text="Open"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="#000000"
             android:textSize="34sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.548"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintEnd_toEndOf="@+id/imageView8"
+            app:layout_constraintHorizontal_bias="0.547"
+            app:layout_constraintStart_toStartOf="@+id/imageView8" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
