--- a/app/src/main/res/layout/frag2.xml
+++ b/app/src/main/res/layout/frag2.xml
@@ -8,16 +8,36 @@
     android:background="#FFFFFF"
     tools:context=".Frag2">
 
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/custom_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/white"
+        tools:ignore="MissingConstraints">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="푸쉐"
+            app:titleTextColor="@color/black"
+            app:titleTextAppearance="@font/nanumsquareneobold"
+            android:layout_gravity="center"
+            android:id="@+id/toolbar_title"
+            android:textSize="30sp"
+            />
+    </androidx.appcompat.widget.Toolbar>
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="60dp"
         android:background="#A5D6A7"
         android:drawableTint="#131313"
+        android:fontFamily="@font/nanumsquareneoregular"
         android:gravity="center"
         android:text="이달의 나눔왕"
-        android:fontFamily="@font/nanumsquareneoregular"
         android:textColor="#131313"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -71,10 +91,10 @@
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="24dp"
                 android:layout_marginTop="4dp"
-                android:text="2. 공유"
                 android:fontFamily="@font/nanumsquareneoregular"
+                android:text="2. 공유"
                 android:textColor="#131313"
                 android:textSize="10sp"
                 android:textStyle="bold"
@@ -86,38 +106,41 @@
                 android:id="@+id/imageView2"
                 android:layout_width="42dp"
                 android:layout_height="42dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="4dp"
                 android:src="@drawable/person2"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/textView7"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.45" />
 
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="24dp"
                 android:layout_marginTop="4dp"
-                android:text="3. 마음냉장고"
                 android:fontFamily="@font/nanumsquareneoregular"
+                android:text="3. 마음냉장고"
                 android:textColor="#131313"
                 android:textSize="10sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/imageView2"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.471" />
 
             <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="42dp"
                 android:layout_height="42dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="4dp"
                 android:src="@drawable/person3"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/textView9"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.45" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
