--- a/app/src/main/res/layout/frag4.xml
+++ b/app/src/main/res/layout/frag4.xml
@@ -9,6 +9,24 @@
     android:orientation="vertical"
     tools:context=".BoardActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/custom_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/white">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="푸쉐"
+            app:titleTextColor="@color/black"
+            app:titleTextAppearance="@font/nanumsquareneobold"
+            android:layout_gravity="center"
+            android:id="@+id/toolbar_title"
+            android:textSize="30sp"
+            />
+    </androidx.appcompat.widget.Toolbar>
+
     <RelativeLayout
         android:id="@+id/top_layout"
         android:layout_width="match_parent"
