--- a/app/src/main/res/layout/frag5.xml
+++ b/app/src/main/res/layout/frag5.xml
@@ -11,6 +11,24 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/custom_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/white">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="푸쉐"
+                app:titleTextColor="@color/black"
+                app:titleTextAppearance="@font/nanumsquareneobold"
+                android:layout_gravity="center"
+                android:id="@+id/toolbar_title"
+                android:textSize="30sp"
+                />
+        </androidx.appcompat.widget.Toolbar>
+
         <!-- 상단 텍스트뷰와 이미지뷰를 가로로 배치하는 LinearLayout -->
         <LinearLayout
             android:layout_width="match_parent"
